# COS568-LI-SP25

./: CMakeLists.txt  benchmark.cc
benchmarks/: benchmark_hybrid_pgm_lipp.cc  benchmark_hybrid_pgm_lipp.h
competitors/: hybrid_pgm_lipp.cc  hybrid_pgm_lipp.h
results/: books_100M_public_uint64_ops_2M_0.000000rq_0.500000nl_0.000000i_results_table.csv  books_100M_public_uint64_ops_2M_0.000000rq_0.500000nl_0.100000i_0m_mix_results_table.csv  books_100M_public_uint64_ops_2M_0.000000rq_0.500000nl_0.500000i_0m_results_table.csv  books_100M_public_uint64_ops_2M_0.000000rq_0.500000nl_0.900000i_0m_mix_results_table.csv  fb_100M_public_uint64_ops_2M_0.000000rq_0.500000nl_0.000000i_results_table.csv  fb_100M_public_uint64_ops_2M_0.000000rq_0.500000nl_0.100000i_0m_mix_results_table.csv  fb_100M_public_uint64_ops_2M_0.000000rq_0.500000nl_0.500000i_0m_results_table.csv  fb_100M_public_uint64_ops_2M_0.000000rq_0.500000nl_0.900000i_0m_mix_results_table.csv  osmc_100M_public_uint64_ops_2M_0.000000rq_0.500000nl_0.000000i_results_table.csv  osmc_100M_public_uint64_ops_2M_0.000000rq_0.500000nl_0.100000i_0m_mix_results_table.csv  osmc_100M_public_uint64_ops_2M_0.000000rq_0.500000nl_0.500000i_0m_results_table.csv  osmc_100M_public_uint64_ops_2M_0.000000rq_0.500000nl_0.900000i_0m_mix_results_table.csv
scripts/: analysis.py  analysis_pset3.py  analysis_pset3_testing.py  analysis_updated.py  create_minimal_cmake.sh  generate_workloads_fb.sh  run_benchmarks_all.sh
